# BabyLlama

./: .coveragerc  .gitignore  API_REFERENCE.md  CONTRIBUTING.md  README.md  TRAINING_GUIDE.md  benchmark.py  benchmark_data.json  create_synthetic_data.py  data_utils.py  distill-ensemble-pretraining-baby-llama.py  evaluate.py  main.py  prepare_data.py  publish_to_hf.py  pyproject.toml  pytest.ini  run_tests.py  test_model.py  train.py  train_and_publish.py  train_tokenizer.py  upload_to_existing_repo.py
.github/workflows/: test.yml
config/: distillation.yaml  llama-10M-large.yaml  llama-10M.yaml  llama-95M.yaml
docs/: README.md
models/: gpt-clean-16000.json
tests/: README.md  conftest.py  test_data_utils.py  test_evaluate.py  test_integration.py  test_train.py
